bugfixes: todays activities not showing

--- a/src/components/CustomerPurchasesScreen.css
+++ b/src/components/CustomerPurchasesScreen.css
@@ -1,9 +1,4 @@
 
-
-.card-content {
-    flex-grow: 1;
-}
-
 .card-title button {
     background-color: lightseagreen;
     border-radius: 50%;
